--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <div class="container">
         <header>
             <div>
-            <div>
-                <img src="img/header.png" alt="Header">
-            </div>
-            <div class="clock"></div>
+                <div>
+                    <img src="img/header.png" alt="Header">
+                </div>
+                <div class="clock"></div>
             </div>
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <a class="navbar-brand" href="#home">Brone Doors</a>
@@ -189,25 +189,25 @@
                         <h3>To call our specialist please fill out and send the form below</h3>
                         <form method="POST" action="https://formspree.io/tigory8@gmail.com">
                             <fieldset>
-                            <div class="form-group">
-                                <label for="client-name">Name:</label>
-                                <input type="text" placeholder="Your name" class="form-control" id="client-name" name="client-name" required>
-                            </div>
-                            <div class="form-group">
-                                <label for="client-email">
+                                <div class="form-group">
+                                    <label for="client-name">Name:</label>
+                                    <input type="text" placeholder="Your name" class="form-control" id="client-name" name="client-name" required>
+                                </div>
+                                <div class="form-group">
+                                    <label for="client-email">
             Email: <input type="email" placeholder="Email"
             class="form-control" id="client-email" aria-describedby="emailHelp"  name="client-email" required>
                     </label>
-                            </div>
-                            <div class="form-group">
-                                <label for="client-address">Address:</label>
-                                <input type="text" placeholder="Address" class="form-control" id="client-address" name="client-address" required>
-                              </div>
-                             <div class="form-group"> 
-                                <label for="client-comment">Your comment:</label>
-                                <input type="text" placeholder="Additional information" class="form-control" id="client-comment" name="client-comment" required>
-                            </div>  
-                                <button type="submit" class="btn btn-primary">Submit</button>
+                                </div>
+                                <div class="form-group">
+                                    <label for="client-address">Address:</label>
+                                    <input type="text" placeholder="Address" class="form-control" id="client-address" name="client-address" required>
+                                </div>
+                                <div class="form-group">
+                                    <label for="client-comment">Your comment:</label>
+                                    <input type="text" placeholder="Additional information" class="form-control" id="client-comment" name="client-comment" required>
+                                </div>
+                                <button type="submit" class="btn btn-dark">Submit</button>
                             </fieldset>
                         </form>
                     </article>
@@ -218,8 +218,8 @@
                 Result: <input type="text" class="display" placeholder="0" readonly name="resultOfCalculation">
             </label>
                             <br>
-                            <button class="calculation btn btn-primary">Calculation</button>
-                            <button class="exchange-rate btn btn-primary">course UAH to selected currency</button>
+                            <button class="calculation btn btn-dark">Calculation</button>
+                            <button class="exchange-rate btn btn-secondary">course UAH to selected currency</button>
                             <br>
                             <label>
                 <output type="text" name="curr-converted"></output>
