--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
             </div>
             <div class="map">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d5150.290701659679!2d23.992604!3d49.802135!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x473ae7bb2a204d0b%3A0x809f6e33e33c5ab4!2sNaukova+Street%2C+25%2C+L&#39;viv%2C+L&#39;vivs&#39;ka+oblast%2C+79000!5e0!3m2!1sen!2sua!4v1557696760138!5m2!1sen!2sua"
-                    width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+                    width="400" height="300" style="border:0" allowfullscreen></iframe>
             </div>
             <div id="form">
                 <div class="row">
@@ -197,7 +197,7 @@
                                 <div class="form-group">
                                     <label for="client-email">
             Email: <input type="email" placeholder="Email"
-            class="form-control" id="client-email" aria-describedby="emailHelp"  name="client-email" required>
+            class="form-control" id="client-email" name="client-email" required>
                     </label>
                                 </div>
                                 <div class="form-group">
